<resources>
    <string name="app_name">BluNote</string>
    <string name="action_settings">Settings</string>
    <string name="network_configuration">Network Configuration</string>
    <string name="user_display_name">User Display Name</string>
    <string name="network_name">Network Name</string>
    <string name="network_password">Password (Optional)</string>
    <string name="client_voting">Client Voting</string>
    <string name="number_votes"># of votes per user</string>
    <string name="queue_size">Queue Size (Optional)</string>
    <string name="launch_network">Launch Network</string>
    <string name="settings">Settings</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="ghost_client">Ghost Client</string>
    <string name="share_song_list">Share Song List</string>
    <string name="leave_network">Leave Network</string>
    <string name="all_songs">All Songs</string>
    <string name="all_albums">All Albums</string>
    <string name="all_artists">All Artists</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="release_version">0.1.0</string>
    <string name="song_title">Song Title</string>
    <string name="owner_name">Owner</string>
    <string name="album_name">Album Name</string>
    <string name="album_artist_name">Artist Name</string>
    <string name="album_length">Album Length</string>
    <string name="album_number_tracks"># of Tracks</string>
    <string name="album_year_released">Album Release Date</string>
    <string name="current_playlist">Current Playlist</string>
    <array name="playlist_context_array">
        <item>Play Now</item>
        <item>Upvote</item>
        <item>Downvote</item>
        <item>View Details</item>
    </array>
    <string name="login_activity">BluNote</string>
    <string name="login_search_hint">Search By Network Name</string>
    <string name="playlist_search_hint">Search by Song Name</string>
    <string name="media_search_hint">Search by Album, Artist or Song</string>
</resources>
