<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AlbumViewActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <ImageView
            android:id="@+id/album_artwork"
            android:layout_width="0dp"
            android:layout_height="100sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight=".5"
            android:src="@android:drawable/ic_notification_clear_all" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/album_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:text="@string/album_name" />

            <TextView
                android:id="@+id/album_artist_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:text="@string/album_artist_name" />

            <TextView
                android:id="@+id/album_length"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:text="@string/album_length" />

            <TextView
                android:id="@+id/album_number_tracks"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:text="@string/album_number_tracks" />

            <TextView
                android:id="@+id/album_year_released"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:text="@string/album_year_released" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Track Listing"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/album_track_list"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ToggleButton
                android:id="@+id/artists_toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:checked="false"
                android:textOff="@string/artists"
                android:textOn="@string/artists" />

            <ToggleButton
                android:id="@+id/albums_toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:checked="true"
                android:textOff="@string/albums"
                android:textOn="@string/albums" />

            <ToggleButton
                android:id="@+id/songs_toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:checked="false"
                android:textOff="@string/songs"
                android:textOn="@string/songs" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/release_version"
            android:textColor="@color/black" />

    </LinearLayout>

</RelativeLayout>