<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MediaListActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/media_list_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:text="@string/all_songs"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/media_list"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ToggleButton
                android:id="@+id/artists_toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:checked="false"
                android:textOn="@string/artists"
                android:textOff="@string/artists"/>

            <ToggleButton
                android:id="@+id/albums_toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:checked="false"
                android:textOn="@string/albums"
                android:textOff="@string/albums"/>

            <ToggleButton
                android:id="@+id/songs_toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:checked="true"
                android:textOn="@string/songs"
                android:textOff="@string/songs"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_version"
            android:textColor="@color/black"
            android:layout_gravity="bottom|center_horizontal"/>

    </LinearLayout>

</RelativeLayout>