<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SongViewActivity"
    tools:showIn="@layout/activity_song_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@android:drawable/sym_def_app_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/song_view_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".25"
                    android:text="Title"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/song_view_artist"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".25"
                    android:text="Artist"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/song_view_album"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".25"
                    android:text="Album"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/song_view_owner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".25"
                    android:text="Owner"
                    android:textColor="@color/black"/>


            </LinearLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="Add to Queue" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ToggleButton
                android:id="@+id/artists_toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:checked="false"
                android:textOff="@string/artists"
                android:textOn="@string/artists" />

            <ToggleButton
                android:id="@+id/albums_toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:checked="false"
                android:textOff="@string/albums"
                android:textOn="@string/albums" />

            <ToggleButton
                android:id="@+id/songs_toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:checked="true"
                android:textOff="@string/songs"
                android:textOn="@string/songs" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/release_version"
            android:textColor="@color/black" />

    </LinearLayout>


</RelativeLayout>