<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MediaPlayerActivity"
    tools:showIn="@layout/activity_media_player">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/playlist_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_media_playlist"
        app:elevation="4dp" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@android:drawable/sym_def_app_icon" />

        <TextView
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/song_title"
            android:layout_width="fill_parent"
            android:id="@+id/song_name" />

        <TextView
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/album_artist_name"
            android:layout_width="fill_parent"
            android:id="@+id/artist_name" />

        <TextView
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/album_name"
            android:layout_width="fill_parent"
            android:id="@+id/album_name" />

        <TextView
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/owner_name"
            android:layout_width="fill_parent"
            android:id="@+id/song_owner_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight=".5"
                android:layout_height="0dp" >

                <TextView
                    android:id="@+id/musicCurrentLoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0:00"/>

                <SeekBar
                    android:id="@+id/musicSeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/musicDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3:23"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight=".5"
                android:layout_height="0dp" >

                <ImageButton
                    android:id="@+id/downvote"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="16dp"
                    android:background="@null"
                    android:src="@drawable/ic_downvote" >
                </ImageButton>

                <ImageButton
                    android:id="@+id/previous"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="16dp"
                    android:background="@null"
                    android:src="@drawable/ic_previous" />

                <ToggleButton
                    android:id="@+id/playPauseButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_play_pause"
                    android:textOn=""
                    android:textOff="">
                </ToggleButton>

                <ImageButton
                    android:id="@+id/nextButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="16dp"
                    android:background="@null"
                    android:src="@drawable/ic_next" />

                <ImageButton
                    android:id="@+id/upvote"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:src="@drawable/ic_upvote" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>